--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -125,7 +125,7 @@
 
     <!-- JavaScript especificos -->
     <script src="{{ asset('acao.js', 'js') }}"></script>
-    <script src="{{ asset('frequencia.js', 'js') }}"></script>
+    <script src="{{ asset('pessoa.js', 'js') }}"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
