--- a/web/view/cadastroVoluntario.twig
+++ b/web/view/cadastroVoluntario.twig
@@ -18,16 +18,15 @@
                         <input type="hidden" name="tipo_pessoa" value="{{ tipo.id }}">
                         {% endif %}
                     {% endfor %}
-                    <div class="form-group col-sm-3">
+                    <div class="col-sm-4">
                         <label for="CPF_pessoa">CPF</label>
-                        <input type="text" name="CPF_pessoa" id="CPF_pessoa" class="form-control" placeholder="999.999.999-99" required autofocus value="{% if voluntario is defined %}{{ voluntario.pessoa.CPF }}{% endif %}">
-                    </div>
-                    <div class="form-group col-sm-1">
-                        <label>&nbsp;</label>
-                        <div class="input-group-append">
-                            <button type="button" id="btnPessoa" class="btn btn-primary">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
+                        <div class="input-group input-group-sm">                            
+                            <input type="text" name="CPF_pessoa" id="CPF_pessoa" class="form-control" placeholder="999.999.999-99" required autofocus value="{% if voluntario is defined %}{{ voluntario.pessoa.CPF }}{% endif %}">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" id="btnPessoa" type="button">                            
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </span>
                         </div>
                     </div>
                     <div class="form-group col-sm-8">
