--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -13,12 +13,13 @@
 
     <title>{% block titulo %}Social - impacto social na prática{% endblock %}</title>
     <link rel="shortcut icon" href="{{ asset('favicon.ico', 'img') }}" />
-    <!-- Bootstrap Core CSS -->
+
+   <!-- Bootstrap Core CSS -->
     <!--<link href="/web/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+   
    <!-- Login CSS -->
-   <link href="{{ asset('login.css', 'css') }}" rel="stylesheet">
+   <!--<link href="{{ asset('login.css', 'css') }}" rel="stylesheet">-->
     
     <!-- Theme CSS -->
     <link href="{{ asset('clean-blog.css', 'css') }}" rel="stylesheet">
